# lifetimes

./: .gitignore  .gitmodules
lifetimes/: CHANGELOG.md  README.md  package-lock.json  package.json
lifetimes/src/: extension.ts  gutters.ts  svg.ts
lifetimes_backend/: Cargo.toml
lifetimes_backend/src/: checker.rs  lib.rs  main.rs
lifetimes_backend/src/checker/: implementation.rs  mod.rs
lifetimes_backend/tests/: check_simple.rs
scratch/src/: main.rs
test_project/src/: main.rs
